--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,10 +2,16 @@
 @import "../sass/utils/variables";
 @import "../sass/components/base";
 
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap");
+
 .section {
   margin: auto;
   width: 1600px;
   padding: 94px 0;
+}
+
+.filter-buttons {
+  margin-bottom: 50px;
 }
 
 .container {
@@ -14,18 +20,18 @@
   padding: 0 15px;
 }
 
-.global-container {
+.container-header {
   display: flex;
   align-items: center;
 }
 
-.global-header {
+.container-header {
   padding: 24px 0;
   background: var(--primary-clr);
   border-bottom: 1px solid #e5e5e5;
 }
 
-.global-header a {
+.container-header a {
   color: var(--secondary-clr);
   font-weight: 500;
   font-size: 14px;
@@ -57,7 +63,7 @@
   position: relative;
 }
 
-.logo-container {
+.logo {
   flex-basis: 238px;
 }
 .contact {
@@ -78,8 +84,8 @@
   position: relative;
 }
 
-.logo-container .home-button:hover,
-.logo-container .home-button:focus {
+.logo .home-button:hover,
+.logo .home-button:focus {
   color: var(--third-clr);
 }
 
@@ -101,17 +107,17 @@
   flex-grow: 1;
 }
 
-.global-header .home-button {
+.container-header .home-button {
   font-family: Raleway, sans-serif;
   font-size: 27px;
   font-weight: 700;
   color: #000000;
 }
-.global-header .button {
+.container-header .button {
   color: var(--third-clr);
 }
 
-.global-header a {
+.container-header a.mail {
   position: relative;
   display: flex;
   align-items: center;
@@ -121,14 +127,14 @@
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
-.global-header a:hover,
-.global-header a:focus {
+.container-header a.mail:hover,
+.container-header a.mail:focus {
   color: var(--third-clr);
   outline: 0;
 }
 
-.global-header a:hover::after,
-.global-header a:focus::after {
+.container-header a.mail:hover::after,
+.container-header a.mail:focus::after {
   content: "";
   position: absolute;
   height: 4px;
@@ -139,7 +145,7 @@
   border-radius: 2px;
 }
 
-.global-header a.phone-number {
+.container-header a.phone-number {
   position: relative;
   display: flex;
   color: var(--link-text-clr);
@@ -151,13 +157,13 @@
   outline: 0;
 }
 
-.global-header a.phone-number:hover,
-.global-header a.phone-number:focus {
+.container-header a.phone-number:hover,
+.container-header a.phone-number:focus {
   color: var(--third-clr);
 }
 
-.global-header a.phone-number:hover::after,
-.global-header a.phone-number:focus::after {
+.container-header a.phone-number:hover::after,
+.container-header a.phone-number:focus::after {
   content: "";
   position: absolute;
   height: 4px;
@@ -465,8 +471,6 @@ address a:focus {
   border-radius: 50%;
   outline: 0;
 }
-
-/* Portofolio */
 
 .section .category-flex {
   padding-top: 0;
