--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,6 @@
+$tablet-breakpoint: 481px;
+$desktop-breakpoint: 769px;
+
 :root {
   --text-font-family: Roboto, sans-serif;
   --secondary-clr: #212121;
@@ -7,5 +10,6 @@
   --main-second-backround-clr: #f5f4fa;
   --social-icons-clr: #afb1b8;
   --primary-clr: #fff;
+  --text-clr: #000;
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
